--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
     "@mui/material": "^5.2.6",
     "@mui/styled-engine": "^5.2.6",
     "@mui/system": "^5.2.6",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "regenerator-runtime": "^0.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +39,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "parcel-bundler": "^1.12.5"
   }
 }
