--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:widget": "parcel build src/index.js --no-source-maps --experimental-scope-hoisting -d widget"
+    "build:widget": "parcel build src/index.js --dist-dir widget"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +42,6 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "parcel-bundler": "^1.12.5"
+    "parcel": "^2.12.0"
   }
 }
