--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:widget": "parcel build src/index.js --dist-dir widget"
+    "build:widget": "parcel build src/index.js --no-source-maps --dist-dir widget"
   },
   "eslintConfig": {
     "extends": [
